--- a/apps/my-health/src/styles.scss
+++ b/apps/my-health/src/styles.scss
@@ -1,1 +1,53 @@
 /* You can add global styles to this file, and also import other style files */
+@use '@angular/material' as mat;
+
+html {
+  color-scheme: light dark;
+  @include mat.theme(
+    (
+      color: mat.$azure-palette,
+      typography: Roboto,
+      density: 0,
+    )
+  );
+}
+
+body {
+  background: var(--mat-sys-surface);
+  color: var(--mat-sys-on-surface);
+}
+
+@media (min-width: 0px) {
+  html {
+    font-size: 12px !important;
+  }
+}
+
+@media (min-width: 768px) {
+  html {
+    font-size: 12px !important;
+  }
+}
+
+@media (min-width: 1024px) {
+  html {
+    font-size: 14px !important;
+  }
+}
+
+@media (min-width: 1280px) {
+  html {
+    font-size: 14px !important;
+  }
+}
+
+@media (min-width: 1536px) {
+  html {
+    font-size: 16px !important;
+  }
+}
+
+
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
