--- a/apps/my-health/src/app/app.component.html
+++ b/apps/my-health/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- <app-nx-welcome></app-nx-welcome> -->
-<div class="p-4">
+<!-- <div class="p-4">
   <h1 class="text-2xl font-bold mb-4">Firebase Test Connection</h1>
   
   @if (loading) {
@@ -74,6 +74,6 @@
       </div>
     </div>
   }
-</div>
+</div> -->
 
 <router-outlet></router-outlet>
