--- a/libs/features/catalog/src/lib/catalog-page.component.html
+++ b/libs/features/catalog/src/lib/catalog-page.component.html
@@ -8,7 +8,7 @@
 } @else if (store.error()) {
   <div class="p-4 text-red-600 bg-red-100 border border-red-400 rounded">
     <p>Error: {{ store.error() }}</p>
-    <button (click)="store.loadAllTests()" class="mt-2 px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600">
+    <button mat-raised-button color="primary" (click)="store.loadAllTests()" class="mt-2">
       Retry
     </button>
   </div>
