--- a/libs/features/catalog/src/lib/test-list/test-list.component.html
+++ b/libs/features/catalog/src/lib/test-list/test-list.component.html
@@ -1,5 +1,5 @@
 @if (store.filteredTests().length > 0) {
-  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+  <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
     @for (test of store.filteredTests(); track test.testId) {
       <my-health-test-list-item [testItem]="test" />
     }
