--- a/apps/my-health/src/styles.scss
+++ b/apps/my-health/src/styles.scss
@@ -16,6 +16,9 @@ html {
   ));
 }
 
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
 // 1. Include a prebuilt theme.
 // @import '@angular/material/prebuilt-themes/indigo-pink.css';
 
