dashboard alemost done

--- a/libs/features/dashboard/src/lib/components/score-card/score-card.component.html
+++ b/libs/features/dashboard/src/lib/components/score-card/score-card.component.html
@@ -1,4 +1,4 @@
-<mat-card [class]="cardClasses() + ' border rounded-lg shadow-md'">
+<mat-card [class]="cardClasses() + ' border rounded-lg'" appearance="outlined">
   <mat-card-header class="pb-0">
     <mat-card-title [class]="titleClasses() + ' text-lg font-semibold'">{{ data().title }}</mat-card-title>
   </mat-card-header>
