--- a/libs/features/dashboard/src/lib/components/upcoming-tests-summary/upcoming-tests-summary.component.html
+++ b/libs/features/dashboard/src/lib/components/upcoming-tests-summary/upcoming-tests-summary.component.html
@@ -1,4 +1,4 @@
-<mat-card class="upcoming-tests-card">
+<mat-card class="upcoming-tests-card border rounded-lg" appearance="outlined">
   <mat-card-header>
     <mat-card-title class="text-xl font-semibold">Nadchodzące badania</mat-card-title>
   </mat-card-header>
