--- a/libs/features/dashboard/src/lib/components/recent-test-results-list/recent-test-results-list.component.html
+++ b/libs/features/dashboard/src/lib/components/recent-test-results-list/recent-test-results-list.component.html
@@ -1,4 +1,4 @@
-<mat-card class="recent-results-card mat-elevation-z0 border rounded-lg" appearance="outlined">
+<mat-card class="recent-results-card border rounded-lg" appearance="outlined">
   <mat-card-header>
     <mat-card-title class="text-xl font-semibold">Ostatnie wyniki badań</mat-card-title>
   </mat-card-header>
